[gd_scene load_steps=15 format=3 uid="uid://cosaav22w682t"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_wkf5m"]
[ext_resource type="Texture2D" uid="uid://cue4c4moaaykp" path="res://Art/PlayerAnims/walkanimbeta-Sheet.png" id="2_7oo3w"]
[ext_resource type="Script" path="res://Scripts/PlayerSpringArm.gd" id="3_cvtvs"]
[ext_resource type="Script" path="res://Scenes/Player/PlayerAnims.gd" id="3_ut24s"]

[sub_resource type="Curve" id="Curve_tboxv"]
max_value = 0.04
_data = [Vector2(0, 0.0206316), 0.0, 0.0, 0, 0, Vector2(1, 0.03), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_lbsqr"]
atlas = ExtResource("2_7oo3w")
region = Rect2(0, 0, 213, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa8hv"]
atlas = ExtResource("2_7oo3w")
region = Rect2(213, 0, 213, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h0f7"]
atlas = ExtResource("2_7oo3w")
region = Rect2(426, 0, 213, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnb7b"]
atlas = ExtResource("2_7oo3w")
region = Rect2(639, 0, 213, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyyow"]
atlas = ExtResource("2_7oo3w")
region = Rect2(852, 0, 213, 280)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp35k"]
atlas = ExtResource("2_7oo3w")
region = Rect2(1065, 0, 213, 280)

[sub_resource type="SpriteFrames" id="SpriteFrames_c6ywq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbsqr")
}],
"loop": true,
"name": &"idle_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbsqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa8hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h0f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnb7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyyow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp35k")
}],
"loop": true,
"name": &"run_1",
"speed": 5.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_mxlaw"]
size = Vector3(0.8, 1, 0.8)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_06hc2"]
radius = 0.4
height = 0.9

[node name="Player" type="CharacterBody3D" groups=["projectile_passthrough"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.647, 0.5)
axis_lock_linear_z = true
script = ExtResource("1_wkf5m")
jump_curve = SubResource("Curve_tboxv")

[node name="PlayerAnims" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.45, 0, 0, 0, 0.45, 0, 0, 0, 0.45, 0, 0, 0)
shaded = true
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_c6ywq")
animation = &"run_1"
autoplay = "idle_1"
frame_progress = 0.201096
script = ExtResource("3_ut24s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.143811, 0)
shape = SubResource("BoxShape3D_mxlaw")

[node name="SpringArm" type="SpringArm3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.19209e-07, 0)
collision_mask = 8
spring_length = 5.75
script = ExtResource("3_cvtvs")

[node name="Camera3D" type="Camera3D" parent="SpringArm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.08907)
current = true

[node name="HeadBonkRayMidR" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.312, 0)
target_position = Vector3(0.25, 0.1, 0)

[node name="HeadBonkRayMidL" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.312, 0)
target_position = Vector3(-0.25, 0.1, 0)

[node name="HeadBonkRayR" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0.312, 0)
target_position = Vector3(0, 0.1, 0)

[node name="HeadBonkRayL" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 0.312, 0)
target_position = Vector3(0, 0.1, 0)

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ClimbTime" type="Label" parent="DebugUI"]
layout_mode = 0
offset_top = 34.0
offset_right = 40.0
offset_bottom = 60.0
text = "hlleo"

[node name="wall_check_arm" type="RayCast3D" parent="."]
target_position = Vector3(0.5, 0, 0)

[node name="wall_check_foot" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)
target_position = Vector3(0.5, 0, 0)

[node name="HitBox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.165432, 0)
shape = SubResource("CapsuleShape3D_06hc2")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
visible = false
light_color = Color(1, 0.952941, 0.6, 1)
light_energy = 0.42
omni_range = 1.3

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
